# opsis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
opsis/: comms.py  message.py  reporter.py
tests/integration/: test.py
