[project]
name = "opsis"
version = "0.1.0"
description = "nice and simple command line output"
authors = [{name = "Marcel Langer", email = "dev@marcel.science"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["click"]

[project.urls]
Homepage = "https://marcel.science"
Repository = "https://github.com/sirmarcel/opsis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
